--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.13"
+    "mongoose": "^5.12.13",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
